# minlisp

./: pyproject.toml
scripts/: min.py  run.py
src/lisp/: environment.py  evaluator.py  parser.py  repl.py
src/minlisp/: repl.py
