[project]
name = "minlisp"
version = "0.1.0"
description = "Minimal lisp interpreter"
authors = [{ name = "Eric Bryant", email = "ejabx@hotmail.com" }]
dependencies = [
    "requests",  # example
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
strict = true
